--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,29 +8,30 @@ on:
 
 jobs:
   release-to-pypi:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.12'
+        python-version: '3.13'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -U setuptools wheel twine bumpversion
+        pip install build twine
 
-    - name: Build and publish
+    - name: Update version in pyproject.toml
+      run: |
+        RELEASE_VERSION=$(git tag -l | tail -n 1)
+        sed -i "s/version = .*/version = \"${RELEASE_VERSION}\"/" pyproject.toml
+
+    - name: Build distribution
+      run: python -m build
+
+    - name: Publish to PyPI
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_PWD }}
-      run: |
-        export RELEASE_VERSION=`git tag -l | tail -n 1`
-        sed -i "s/IN_PROGRESS/${RELEASE_VERSION}/g" st3215/__init__.py
-        sed -i "s/IN_PROGRESS/${RELEASE_VERSION}/g" setup.py
-        python3 setup.py release
-        twine upload dist/*
+      run: twine upload dist/*
